Add TcdbTrackpointConverterTest